--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,109 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  margin: 0px;
+  padding: 0px;
+  font-family: Helvetica;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  background-color: #c0392b;
+  width: 100vw;
+  height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
+
+body .container {
+  margin-bottom: 1em;
+  background-color: white;
+  grid: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  min-width: 300px;
+  max-width: 500px;
+  padding: 2em;
+}
+
+body .container .row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  margin-top: 1em;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+body .container .col {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+body .container #timer-label {
+  margin-top: 0.75em;
+  font-size: 2em;
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(60%, white), color-stop(60%, yellow));
+  background: linear-gradient(180deg, white 60%, yellow 60%);
+}
+
+body .container #time-left {
+  margin-top: 0.4em;
+  font-size: 2em;
+  margin-bottom: 1em;
+}
+
+body .container .length {
+  margin-top: 0em;
+}
+
+#session-increment, #session-decrement, #break-increment, #break-decrement {
+  background-color: transparent;
+  border-width: 0px;
+  margin: 0.6em;
+  cursor: pointer;
+  border-radius: 4px;
+}
+
+#session-increment:hover, #session-decrement:hover, #break-increment:hover, #break-decrement:hover {
+  background-color: yellow;
+}
+
+#reset, #start_stop {
+  padding: 0.75em 1.75em;
+  background-color: transparent;
+  border: 2px solid black;
+  border-radius: 4px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+#reset:hover, #start_stop:hover {
+  background-color: yellow;
+}
+
+h1 {
+  margin-bottom: 0.4em;
+}
+
+.length {
+  margin-top: 0em;
+}
+/*# sourceMappingURL=index.css.map */
